<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:paddingBottom="15dp">


    <!-- The main body of the view. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Our toolbar I suppose -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/register">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/step_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/action_bar"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="100dp"
                        android:layout_height="4dp"
                        android:layout_marginVertical="7dp"
                        android:background="@color/primary" />


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="4dp"
                        android:layout_marginVertical="7dp"
                        android:background="@color/hint" />

                </LinearLayout>


                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="100dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/dot" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/step_1_of_3"
                android:textColor="@color/primary" />
        </LinearLayout>

        <!-- First name. -->
        <LinearLayout
            android:id="@+id/firstname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/step_indicator"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/label_firstname" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="First Name"
                android:background="@drawable/input_border"
                android:hint="@string/hint_firstname"
                android:importantForAutofill="yes"
                android:inputType="textPersonName"
                android:paddingHorizontal="14dp"
                android:paddingVertical="15dp"
                android:textColorHint="#818898"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Last name. -->
        <LinearLayout
            android:id="@+id/lastname_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/firstname_layout"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/label_lastname" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Last Name"
                android:background="@drawable/input_border"
                android:hint="@string/hint_lastname"
                android:importantForAutofill="yes"
                android:inputType="textPersonName"
                android:paddingHorizontal="14dp"
                android:paddingVertical="15dp"
                android:textColorHint="#818898"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Email address. -->
        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lastname_layout"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/label_email" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="EmailAddress"
                android:background="@drawable/input_border"
                android:hint="@string/hint_email"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="14dp"
                android:paddingVertical="15dp"
                android:textColorHint="#818898"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Phone number. -->
        <LinearLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_layout"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/label_phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_border"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="0dp"
                    android:background="@android:color/transparent"
                    android:entries="@array/country_codes"
                    android:paddingStart="5dp"
                    android:paddingEnd="0dp"
                    android:spinnerMode="dropdown"
                    android:textColor="#818898" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:importantForAccessibility="no"
                    android:padding="0dp"
                    android:src="@drawable/ic_arrow_down" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="7dp"
                    android:background="#ECEFF3" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="PhoneNumber"
                    android:background="@android:color/transparent"
                    android:hint="@string/hint_phone"
                    android:importantForAutofill="yes"
                    android:inputType="phone"
                    android:paddingHorizontal="14dp"
                    android:paddingVertical="15dp"
                    android:textColorHint="#818898"
                    android:textSize="14sp" />

            </LinearLayout>
        </LinearLayout>

        <!-- City -->
        <LinearLayout
            android:id="@+id/city_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_layout"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/label_city" />

            <Spinner
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:background="@drawable/input_border"
                android:entries="@array/cites"
                android:paddingHorizontal="5dp"
                android:paddingVertical="15dp"
                android:spinnerMode="dropdown"
                android:textColor="#818898" />
        </LinearLayout>

        <!-- After city is the privacy policy checker region -->
        <LinearLayout
            android:id="@+id/terms_privacy_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/city_layout"
            android:layout_marginBottom="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/accept_terms_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/terms_privacy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms_and_privacy"
                android:textColorHighlight="?attr/colorPrimaryDark"
                android:textColorLink="?attr/colorPrimary" />

        </LinearLayout>

        <!-- Our account verification button -->
        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/terms_privacy_layout"
            android:layout_marginTop="20dp"
            android:background="@drawable/stadium_button"
            android:paddingVertical="10dp"
            android:text="@string/verify_account"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <!-- This is the final element -->
        <TextView
            android:id="@+id/sign_in_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/register_button"
            android:layout_marginTop="20dp"
            android:text="@string/have_account"
            android:textAlignment="center"
            android:textColorHighlight="?attr/colorPrimaryDark"
            android:textColorLink="?attr/colorPrimary" />
    </RelativeLayout>
</ScrollView>